# sdl2-gamepad-tool

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: build_macos.sh  build_windows.sh  clean.sh  package_linux_appimage.sh  package_linux_deb.sh  package_linux_tarball.sh  package_macos.sh  package_windows.sh
src/: CMakeLists.txt  main.cpp
src/core/: GamepadDatabase.cpp  GamepadDatabase.h  GamepadMapper.cpp  GamepadMapper.h  JoystickEnumerator.cpp  JoystickEnumerator.h  Logger.cpp  Logger.h  sdlpollevent.cpp  sdlpollevent.h
src/network/: filedownloader.cpp  filedownloader.h
src/platform/: Environment.h  EnvironmentLinux.cpp  EnvironmentMac.cpp  EnvironmentWin.cpp  Info.plist.in  gamepad-tool-debian.desktop  gamepad-tool.desktop  gamepadtool.rc  local.generalarcade.gamepadtool.plist
src/resources/: res.qrc
src/resources/images/: gamepadtool.icns
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  tst_environment.cpp  tst_gamepaddatabase.cpp  tst_gamepadmapper.cpp  tst_joystickenumerator.cpp  tst_logger.cpp  tst_sdlpollevent.cpp
